K8S/yapw-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-yapw
  labels:
    team: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-yapw
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: backend-yapw
    spec:
      containers:
      - name: backend-yapw
        image: nikunj3011/yapwapi
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /Video/take/1
            port: 8080
          timeoutSeconds: 5
          initialDelaySeconds: 60
          periodSeconds: 1800
        readinessProbe:
          initialDelaySeconds: 10
          httpGet:
            path: /Videos/take/1
            port: 80
        resources:
          limits:
            # cpu: "0.3"
            # memory: 300Mi
          requests:
            # cpu: "0.3"
            # memory: 300Mi
        ports:
        - containerPort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: backendsrv-yapw
spec:
  type: ClusterIP
  selector:
    app: backend-yapw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: backendlb-yapw
spec:
  type: LoadBalancer
  selector:
    app: backend-yapw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30081

# http://localhost/swagger/index.html
