K8S/yapw-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: YAPWservice-srv
spec:
  type: NodePort
  selector:
      app: YAPWservice
  ports:
    - name: YAPWservice
      protocol: TCP
      port: 5000
      targetPort: 5000
