K8S/yapw-website-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-yapw
  labels:
    team: development
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend-yapw
  template:
    metadata:
      labels:
        app: frontend-yapw
    spec:
      containers:
      - name: frontend-yapw
        image: nikunj3011/yapwwebsite
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          
---
apiVersion: v1
kind: Service
metadata:
  name: frontendsrv-yapw
spec:
  type: ClusterIP
  selector:
    app: frontend-yapw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: frontendlb-yapw
spec:
  type: LoadBalancer
  selector:
    app: frontend-yapw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080

# http://localhost/swagger/index.html
